--- a/online-tutoring/src/components/Login.css
+++ b/online-tutoring/src/components/Login.css
@@ -31,6 +31,7 @@ li {
   cursor: pointer; 
   font-weight: bold;
   font-size: 16px;
+  border-radius: 5px;
 }
 
 .verification-code-container {
@@ -51,6 +52,7 @@ li {
   font-weight: bold;
   font-size: 16px;
   margin-top: 30px;
+  border-radius: 5px;
 }
 
 .verify-login-button:hover {
@@ -66,13 +68,12 @@ li {
   justify-content: center; 
   align-items: center; 
   height: 90vh; 
-  
 }
 
 .login-form {
   text-align: left; 
   padding: 110px; 
-  background-color: #EF915C; 
+  background-image: linear-gradient(to bottom, #F19E6F, #E9702C);
   width: 1200px;
 }
 
@@ -105,6 +106,7 @@ li {
   cursor: pointer;
   font-weight: bold;
   font-size: 16px;
+  border-radius: 5px;
 }
 
 .sign-up-button:hover {
