--- a/online-tutoring/src/components/Navbar.css
+++ b/online-tutoring/src/components/Navbar.css
@@ -3,9 +3,9 @@
     justify-content: space-between; /* Space items evenly, pushing the button to the right */
     align-items: center; /* Center items vertically within the navbar */
     background-color: white; 
-    font-family: 'Inter', sans-serif;    
-    font-weight: bold;
-    font-size: large;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: medium;
+    font-weight: 500;
     padding: 25px; 
     border-bottom: 1px solid #ccc; 
   }
@@ -34,9 +34,9 @@
 
   .signup {
     background-color: black;
-    font-family: 'Inter', sans-serif;    
-    font-weight: bold;
-    font-size:large;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+    font-weight: 500;
+    font-size:medium;
     color: white;
     border:none;
     cursor: pointer;
