--- a/online-tutoring/src/components/Navbar.css
+++ b/online-tutoring/src/components/Navbar.css
@@ -1,4 +1,13 @@
-.navbar {
+  .sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 100;
+    background-color: white; /* Change the background color when sticky */
+    border-bottom: 1px solid #ccc; /* Retain the border when sticky */
+  }
+    
+  .navbar {
     display: flex; /* Use flexbox to control alignment */
     justify-content: space-between; /* Space items evenly, pushing the button to the right */
     align-items: center; /* Center items vertically within the navbar */
@@ -6,8 +15,8 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: medium;
     font-weight: 500;
-    padding: 25px; 
-    border-bottom: 1px solid #ccc; 
+    padding: 15px; 
+    transition: background-color 0.6s; /* Add transition for smooth color change */
   }
 
   .signup-container {
@@ -41,7 +50,7 @@
     border:none;
     cursor: pointer;
     padding: 15px;
-    border-radius: 20px;
+    border-radius: 15px;
   }
   .signup:hover {
     color: black;
