--- a/online-tutoring/src/components/Registration.css
+++ b/online-tutoring/src/components/Registration.css
@@ -1,10 +1,11 @@
 /* Registration.css */
 .registration-container {
   border-radius: 50px;
-  width: 1500px; /* Set the width of the box */
-  height: 100px; /* Set the height of the box */
+  width: 1200px; /* Set the width of the box */
+  height: 60vh; /* Set the height of the box */
   background: linear-gradient(135deg, #FFA500, #FF6347); /* Orange gradient colors */
   border: 1px solid #FFA500; /* Optional: Add a border with the same color as the starting gradient color */
+  border-radius: 50px;
   font-size: 20px; /* Set the font size */
   position: fixed; /* Set the position to fixed */
   top: 50%; /* Center vertically */
