--- a/online-tutoring/src/components/Registration.css
+++ b/online-tutoring/src/components/Registration.css
@@ -54,8 +54,8 @@
   input[type="password"] {
     width: 75%;
     padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    /*border: 1px solid #ccc;
+    border-radius: 5px;*/
   }
   
   .password-requirements {
