chore: updated bottom footer

--- a/online-tutoring/src/components/BottomNav.css
+++ b/online-tutoring/src/components/BottomNav.css
@@ -1,13 +1,16 @@
+
 .bottom-nav {
     background-color: hsl(34, 100%, 50%);
-    height: 300px;
+    height: 200px;
+    bottom: 0;
+    width: 100%;
 }
 
 .links  {
     color:white;
     text-align: left;
     padding-left: 250px;
-    padding-top:50px;
+    padding-top:25px;
     font-size: 20px;
 }
 
