--- a/online-tutoring/src/components/RegistrationSelection.css
+++ b/online-tutoring/src/components/RegistrationSelection.css
@@ -1,20 +1,29 @@
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 100vh; /* Ensure that the container takes at least the full viewport height */
+}
+
 .registration-container {
+    border-radius: 50px;
+    width: 800px; /* Set the width of the box */
+    height: 500px; /* Set the height of the box */
+    background: linear-gradient(135deg, #FFA500, #FF6347); /* Orange gradient colors */
+    border: 1px solid #FFA500; /* Optional: Add a border with the same color as the starting gradient color */
+    text-align: center;
+    color: white; /* Set text color to white for better readability */
+    font-size: 20px; /* Set the font size */
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 90vh;
-    background: linear-gradient(135deg, #FFA500, #FF6347);
-    margin-left: 30px; 
-    margin-right: 30px; 
-    margin-top: 40px;
-    border-radius: 20px;
+    justify-content: center; /* Horizontally center content */
+    align-items: center; /* Vertically center content */
   }
   
   .registration-form {
     background-color: #FFFFFF;
     width: 350px; 
     height: 150px;
-    padding: 50px 50px;
+    padding: 50px;
     border-radius: 10px;
     text-align: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -53,26 +62,3 @@
     margin: 10px; 
   }
   
-  .bottom-nav {
-    background-color: hsl(34, 100%, 50%);
-    height: 300px;
-    margin-top: 500px;
-  }
-
-  .bottom-nav a {
-    text-decoration: none;
-    color: white; 
-  }
-  
-  .links  {
-    color:white;
-    text-align: left;
-    padding-left: 250px;
-    padding-top:50px;
-    font-size: 20px;
-  }
-  
-  .bottom-nav :hover {
-    color:black;
-    transition: 0.5s;
-  }
