--- a/online-tutoring/src/components/Hero.css
+++ b/online-tutoring/src/components/Hero.css
@@ -50,3 +50,16 @@
     justify-content: center; /* Horizontally center content */
     align-items: center; /* Vertically center content */
   }
+
+  /*
+  <div className="registration-container">
+          <div className="registration-form">
+            <h1 className="rsHeader">Are you a</h1>
+            <div className="buttons-container">
+              <Link to="/registration" style={{ textDecoration: 'none' }}className="registration-button">Student</Link>
+              <span className="or-text">or</span>
+              <Link to="/registrationtutors" style={{ textDecoration: 'none' }}className="registration-button">Tutor</Link>
+            </div>
+          </div>
+        </div>
+  */
