--- a/online-tutoring/src/components/RegistrationTutors.css
+++ b/online-tutoring/src/components/RegistrationTutors.css
@@ -1,14 +1,16 @@
 .tutor-registration-container {
-    text-align: left; 
-    padding: 50px;
-    font-size: 20px;
-    background: linear-gradient(135deg, #FFA500, #FF6347);
-    border: 1px solid #FFA500;
-    border-radius: 50px;
-    width: 1200px;
-    height: 60vh;
-    
-   
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 20px;
+  background: linear-gradient(135deg, #FFA500, #FF6347);
+  border: 1px solid #FFA500;
+  border-radius: 50px;
+  width: 1000px;
+  height: 100vh;
+  margin: 0 auto;
   }
 
 .test {
@@ -46,7 +48,7 @@
   input[type="first name"],
   input[type="last name"],
   input[type="phone number"],
-  input[type="school]"],
+  input[type="school"],
   input[type="about me"],
   input[type="hours"],
   input[type="email"],
@@ -56,3 +58,29 @@
   /*border: 1px solid #ccc;
     border-radius: 5px;*/
   }
+
+  .register-tutor-button {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+    font-weight: 500;
+    font-size: medium;
+    background-color: black;
+    color: white; 
+    border: none; 
+    padding: 10px 20px; 
+    cursor: pointer; 
+    border-radius: 15px;
+  }
+
+  .register-tutor-button:hover {
+    color: black;
+    background-color:white;
+    transition:0.7s; 
+  }
+
+  .tutor-title {
+  text-align: center;
+  margin-top: 20px; 
+  font-size: 43px; 
+  color: black; 
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+}
