--- a/online-tutoring/src/components/RegistrationTutors.css
+++ b/online-tutoring/src/components/RegistrationTutors.css
@@ -5,14 +5,24 @@
     background: linear-gradient(135deg, #FFA500, #FF6347);
     border: 1px solid #FFA500;
     border-radius: 50px;
-    width: 1200px;
-    height: 60vh;
-    
-   
+    width: 1000px;
+    height: 80vh;
   }
 
 .test {
     padding-bottom: 500px;
+    padding-left: 350px;
+}
+
+.tutor-reg-title {
+    text-align: center; 
+    color: white; 
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+  }
+
+.subject-checkboxes {
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
 }
 
 .bottom-nav {
@@ -38,9 +48,24 @@
     transition: 0.5s;
 }
 
-.form-group {
+.form-group-2 {
     margin-bottom: 15px;
+    text-align: center;
     display: block;
+  }
+
+  .register-button-2 {
+    background-color: #000000;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+  }
+
+  .tut-reg-button-format {
+    padding-top: 15px;
+    text-align: center;
   }
 
   input[type="first name"],
