chore: current student/tutor reg page changes

--- a/online-tutoring/src/components/RegistrationTutors.css
+++ b/online-tutoring/src/components/RegistrationTutors.css
@@ -35,11 +35,13 @@
   padding-left: 10px;
   display: flex;
   align-items: center;
+  color: white;
 
 }
 
 checkboxes .MuiFormControlLabel-root + .MuiFormControlLabel-root {
   margin-left: 10px; /* Adjust as needed for horizontal spacing */
+  color: white;
 }
 
 .subject-checkboxes {
