--- a/online-tutoring/src/components/Registration.css
+++ b/online-tutoring/src/components/Registration.css
@@ -11,9 +11,9 @@
   top: 50%; /* Center vertically */
   left: 50%; /* Center horizontally */
   right: 50%;
-  bottom: 70%;
   transform: translate(-50%, -50%); /* Center the box */
-  padding-bottom: 30px;
+  padding-bottom: 110px;
+  padding-top: 90px;
   
   }
   
