--- a/online-tutoring/src/components/Registration.css
+++ b/online-tutoring/src/components/Registration.css
@@ -1,69 +1,51 @@
 /* Registration.css */
-.registration-container {
+.new_registration-container {
+  text-align: left; 
+  padding: 90px 50px 90px 50px; /* top, right, bottom, left */
+  font-size: 20px;
+  margin-top: 40px;
+  background: linear-gradient(135deg, white, #FF6347);
+  /*border: 1px solid white;*/
   border-radius: 50px;
-  width: 1200px; /* Set the width of the box */
-  height: 60vh; /* Set the height of the box */
-  background: linear-gradient(135deg, #FFA500, #FF6347); /* Orange gradient colors */
-  border: 1px solid #FFA500; /* Optional: Add a border with the same color as the starting gradient color */
-  /*border-radius: 50px;*/
-  font-size: 20px; /* Set the font size */
-  position: fixed; /* Set the position to fixed */
-  top: 50%; /* Center vertically */
-  left: 50%; /* Center horizontally */
-  right: 50%;
-  transform: translate(-50%, -50%); /* Center the box */
-  padding-bottom: 110px;
-  padding-top: 90px;
-  
+  width: 850px;
+  height: 475px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   }
-  
-  .button-container {
+
+  .new_registration-container > div {
+    width: 80%;  /* Adjust this percentage if you want the internal content to be narrower or wider */
     display: flex;
+    flex-direction: column;
     align-items: center;
   }
-  
-  .student-button,
-  .instructor-button {
-    flex: 1;
-    margin: 50px; /* Adjust margin as needed */
-    height: 60px;
-    background-color: #000000;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 10px 20px;
-    cursor: pointer;
-  }
 
-  .student-button:hover,.instructor-button:hover {
-    background-color: #585858;
-  }
-
-  h2 {
-    margin-bottom: 20px;
-  }
-  
   .form-group {
-    margin-bottom: 15px;
-    display: block;
+    width: 100%;
+    display: flex;
+    justify-content: center;
   }
-  
-  input[type="first name"],
-  input[type="last name"],
-  input[type="date"],
-  input[type="school"],
-  input[type="major"],
-  input[type="email"],
-  input[type="password"] {
-    width: 75%;
-    padding: 10px;
-    /*border: 1px solid #ccc;
-    border-radius: 5px;*/
+
+  .proportion {
+    width: 80%; /* Adjust this percentage if you want the TextField to be narrower or wider */
   }
-  
+
+  .new_registration-container h2{
+    color: white;
+  }
+
   .password-requirements {
-    font-size: 12px;
+    font-size: 18px;
     color: #000000;
+    line-height: 1.5;
+    text-align: center;
   }
   
   .register-button {
@@ -92,4 +74,3 @@
 .login-redirect-button:hover {
     background-color: #585858;
 }
-  
