default color change

--- a/online-tutoring/src/components/Registration.css
+++ b/online-tutoring/src/components/Registration.css
@@ -4,7 +4,7 @@
   padding: 90px 50px 90px 50px; /* top, right, bottom, left */
   font-size: 20px;
   margin-top: 40px;
-  background: linear-gradient(135deg, white, #FF6347);
+  background: linear-gradient(135deg, #FFA500, #FF6347);
   /*border: 1px solid white;*/
   border-radius: 50px;
   width: 850px;
