changed website color to purple

--- a/online-tutoring/src/components/BottomNav.css
+++ b/online-tutoring/src/components/BottomNav.css
@@ -1,6 +1,6 @@
 
 .bottom-nav {
-    background-color: linear-gradient(135deg, #FFA500, #FF6347);
+    background-color:black;
     height: 200px;
     width: 100%;
 }
