--- a/online-tutoring/src/components/RegistrationTutors.css
+++ b/online-tutoring/src/components/RegistrationTutors.css
@@ -2,7 +2,7 @@
     text-align: left; 
     padding: 50px;
     font-size: 20px;
-    background: linear-gradient(135deg, #FFA500, #FF6347);
+    background: linear-gradient(135deg, #B674E6, #3B2667);
     border: 1px solid #FFA500;
     border-radius: 50px;
     width: 1000px;
