--- a/online-tutoring/src/components/Login.css
+++ b/online-tutoring/src/components/Login.css
@@ -72,7 +72,7 @@
   text-align: left; 
   padding: 90px; 
   font-size: 20px;
-  background: linear-gradient(135deg, #FFA500, #FF6347);
+  background: linear-gradient(135deg, #B674E6, #3B2667);
   border: 1px solid #FFA500;
   border-radius: 50px;
   width: 1000px;
