--- a/online-tutoring/src/components/Navbar.css
+++ b/online-tutoring/src/components/Navbar.css
@@ -55,12 +55,12 @@
   }
   .signup:hover {
     color: black;
-    background-color:orange;
+    background-color:rgb(186, 108, 223);;
     transition:0.7s;
   }
   
   
   .navbar a:hover {
-    color: orange; 
+    color:rgb(186, 108, 223);
     transition: 0.5s;
   }
