--- a/online-tutoring/src/components/Landing.css
+++ b/online-tutoring/src/components/Landing.css
@@ -1,6 +1,8 @@
 .additional-info {
-    padding-left: 420px;
-    padding-bottom: 500px;
+    padding-bottom: 160px;
+    display: flex;
+    justify-content: center; 
+    align-items: center;
 }
 
 .info-box1 {
