--- a/online-tutoring/src/components/SelectionHero.css
+++ b/online-tutoring/src/components/SelectionHero.css
@@ -1,5 +1,9 @@
 .selection-page {
-  display: fixed;
+  display: flex;
+  padding-top: 50px;
+  flex-direction: column; 
+  justify-content: center; 
+  align-items: center; 
 }
 
 .registration-container {
@@ -7,7 +11,6 @@
   width: 900px;
   height: 500px;
   background: linear-gradient(135deg, #B674E6, #3B2667);
-  border: 1px solid #FFA500;
   text-align: center;
   color: white;
   display: flex;
