--- a/online-tutoring/src/components/Homepage.css
+++ b/online-tutoring/src/components/Homepage.css
@@ -8,3 +8,9 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
   }
+  .profileImage {
+    border-radius: 50%;
+    width: 100px;  /* Adjust width as necessary */
+    height: 100px;  /* Adjust height as necessary */
+    object-fit: cover;  /* This ensures that the image covers the circle without distortion */
+}
