--- a/online-tutoring/src/components/Login.css
+++ b/online-tutoring/src/components/Login.css
@@ -12,7 +12,7 @@
   box-align: right;
 }
 
-.send-verification-button {
+.send-verification-button { /*Login button*/
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
   font-weight: 500;
   font-size:medium;
@@ -75,7 +75,7 @@
   background: linear-gradient(135deg, #B674E6, #3B2667);
   border-radius: 50px;
   width: 1000px;
-  height: 400px;
+  height: 440px;
 }
 
 .login-form input[type="email"],
@@ -99,7 +99,6 @@
 }
 
 .bottom-nav {
-  background-color: hsl(34, 100%, 50%);
   height: 300px;
 }
 
