--- a/online-tutoring/src/components/RegistrationTutors.css
+++ b/online-tutoring/src/components/RegistrationTutors.css
@@ -1,16 +1,25 @@
 .tutor-registration-container {
-    text-align: left; 
+    text-align: center; 
     padding: 50px;
     font-size: 20px;
     background: linear-gradient(135deg, #B674E6, #3B2667);
     border-radius: 50px;
     width: 1000px;
-    height: 200vh;
+    
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .tutor-registration-container h2 {
+    color: white;
   }
 
 .test {
     padding-bottom: 300px;
     padding-left: 350px;
+    margin-bottom: 1300px;
+    
 }
 
 .tutor-reg-title {
@@ -131,6 +140,7 @@ checkboxes .MuiFormControlLabel-root + .MuiFormControlLabel-root {
   color: black; 
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 
 .MuiCheckbox-root.Mui-checked {
   color: white; /* Change the color to white when checked */
