--- a/online-tutoring/src/components/RegistrationTutors.css
+++ b/online-tutoring/src/components/RegistrationTutors.css
@@ -1,152 +1,162 @@
 .tutor-registration-container {
-    text-align: center; 
-    padding: 50px;
-    font-size: 20px;
-    background: linear-gradient(135deg, #B674E6, #3B2667);
-    border-radius: 50px;
-    width: 1000px;
-    
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-  }
+text-align: center; 
+padding: 50px;
+font-size: 20px;
+background: linear-gradient(135deg, #B674E6, #3B2667);
+border-radius: 50px;
+width: 1000px;
 
-  .tutor-registration-container h2 {
-    color: white;
-  }
+position: absolute;
+left: 50%;
+transform: translateX(-50%);
+}
+
+.tutor-registration-container h2 {
+color: white;
+}
+
+.form-group{
+  color: black;
+}
+
+.upload-container {
+display: flex;
+align-items: center;
+justify-content: center;
+width: 100%;
+margin-bottom: 20px;
+}
+
+.upload-container label {
+margin-right: 50px;
+}
 
 .test {
-    padding-bottom: 300px;
-    padding-left: 350px;
-    margin-bottom: 1300px;
-    
+padding-bottom: 300px;
+padding-left: 350px;
+margin-bottom: 1300px;
+
 }
 
 .tutor-reg-title {
-    text-align: center; 
-    color: white; 
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
-  }
+text-align: center; 
+color: white; 
+font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+}
 
-  .proportion2 {
-    width: 450px; 
-    box-align: right;
-  }
+.proportion2 {
+width: 450px; 
+box-align: right;
+}
 
-  .background-check-questions {
-    text-align: center; 
-    color: white; 
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
-  }
+.background-check-questions {
+text-align: center; 
+color: white; 
+font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+}
 
 .checkboxes {
-  padding-left: 10px;
-  display: flex;
-  align-items: center;
-  color: white;
+padding-left: 10px;
+display: flex;
+align-items: center;
+color: white;
 
 }
 
 checkboxes .MuiFormControlLabel-root + .MuiFormControlLabel-root {
-  margin-left: 10px; /* Adjust as needed for horizontal spacing */
-  color: white;
+margin-left: 10px; /* Adjust as needed for horizontal spacing */
+color: white;
 }
 
 .subject-checkboxes {
-    text-align: center;
-    color: white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+text-align: center;
+color: white;
+font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
 }
 
 .bottom-nav {
-    background-color: hsl(34, 100%, 50%);
-    height: 300px;
+height: 300px;
 }
 
 .links  {
-    color:white;
-    text-align: left;
-    padding-left: 250px;
-    padding-top:50px;
-    font-size: 20px;
+color:white;
+text-align: left;
+padding-left: 250px;
+padding-top:50px;
+font-size: 20px;
 }
 
 .bottom-nav a {
-    text-decoration: none;
-    color: white; 
+text-decoration: none;
+color: white; 
 }
 
 .bottom-nav :hover {
-    color:black;
-    transition: 0.5s;
+color:black;
+transition: 0.5s;
 }
 
-.form-group-2 {
-    margin-bottom: 15px;
-    text-align: center;
-    display: block;
-  }
 
-  .register-button-2 {
-    background-color: #000000;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 10px 20px;
-    cursor: pointer;
-  }
+.register-button-2 {
+background-color: #000000;
+color: #fff;
+border: none;
+border-radius: 5px;
+padding: 10px 20px;
+cursor: pointer;
+}
 
-  .tut-reg-button-format {
-    padding-top: 30px;
-    text-align: center;
-  }
+.tut-reg-button-format {
+padding-top: 30px;
+text-align: center;
+}
 
-  input[type="first name"],
-  input[type="last name"],
-  input[type="phone number"],
-  input[type="school"],
-  input[type="about me"],
-  input[type="hours"],
-  input[type="email"],
-  input[type="password"] {
-    width: 75%;
-    padding: 10px;
-  /*border: 1px solid #ccc;
-    border-radius: 5px;*/
-  }
+input[type="first name"],
+input[type="last name"],
+input[type="phone number"],
+input[type="school"],
+input[type="about me"],
+input[type="hours"],
+input[type="email"],
+input[type="password"] {
+width: 75%;
+padding: 10px;
+/*border: 1px solid #ccc;
+border-radius: 5px;*/
+}
 
-  .register-tutor-button {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
-    font-weight: 500;
-    font-size: medium;
-    background-color: black;
-    color: white; 
-    border: none; 
-    padding: 10px 20px; 
-    cursor: pointer; 
-    border-radius: 15px;
-  }
+.register-tutor-button {
+font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+font-weight: 500;
+font-size: medium;
+background-color: black;
+color: white; 
+border: none; 
+padding: 10px 20px; 
+cursor: pointer; 
+border-radius: 15px;
+}
 
-  .register-tutor-button:hover {
-    color: black;
-    background-color:white;
-    transition:0.7s; 
-  }
+.register-tutor-button:hover {
+color: black;
+background-color:white;
+transition:0.7s; 
+}
 
-  .tutor-title {
-  text-align: center;
-  margin-top: 20px; 
-  font-size: 43px; 
-  color: black; 
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.tutor-title {
+text-align: center;
+margin-top: 20px; 
+font-size: 43px; 
+color: black; 
+font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 
 .MuiCheckbox-root.Mui-checked {
-  color: white; /* Change the color to white when checked */
+color: white; /* Change the color to white when checked */
 }
 
 .proportion2 {
-  width: 700px; 
-  box-align: right;
+width: 700px; 
+box-align: right;
 }
