--- a/online-tutoring/src/components/Registration.css
+++ b/online-tutoring/src/components/Registration.css
@@ -12,7 +12,6 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -42,34 +41,45 @@
 
   .password-requirements {
     font-size: 18px;
-    color: #000000;
     line-height: 1.5;
     text-align: center;
+    color: white;
   }
   
   .register-button {
-    background-color: #000000;
-    color: #fff;
+    background-color: black;
+    color: white;
     border: none;
-    border-radius: 5px;
+    border-radius: 15px;
     padding: 10px 20px;
     cursor: pointer;
     margin-right: 15px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+    font-weight: 500;
+    font-size:medium;
 }
 
 .register-button:hover {
-    background-color: #585858;
+  color: black;
+  background-color:white;
+  transition:0.7s;
 }
 
 .login-redirect-button {
-    background-color: #000000;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 10px 20px;
-    cursor: pointer;
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 15px;
+  padding: 10px 20px;
+  cursor: pointer;
+  margin-right: 15px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+  font-weight: 500;
+  font-size:medium;
 }
 
 .login-redirect-button:hover {
-    background-color: #585858;
+  color: black;
+  background-color:white;
+  transition:0.7s;
 }
