--- a/online-tutoring/src/components/Navbar.css
+++ b/online-tutoring/src/components/Navbar.css
@@ -58,7 +58,7 @@
   }
   .signup:hover {
     color: black;
-    background-color:rgb(186, 108, 223);;
+    background-color:rgb(186, 108, 223);
     transition:0.7s;
   }
   
