--- a/online-tutoring/src/components/Homepage.css
+++ b/online-tutoring/src/components/Homepage.css
@@ -95,5 +95,91 @@
   padding-left: 120px;
 }
 
-  
+.dashboard-container-student{
+  display: flex;
+  justify-content: flex-end;
+  align-items: right;
+  flex-direction: column; 
+  font-size: 20px;
+  background: linear-gradient(135deg, #B674E6, #3B2667);
+  border-radius: 50px;
+  width: 1000px; 
+  height: 430px; 
+  margin: 0 120px 0 auto;
+}  
+
+.favorite-tutors {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+  background: white; 
+  border-radius: 50px;
+  width: 250px;
+  height: 380px;
+  margin-top: 20px;
+  margin-left: 40px;
+  margin-bottom: -410px;
+}
+
+.upcoming-appts-student {
+  background: white; 
+  border-radius: 50px;
+  width: 630px;
+  height: 380px;
+  margin-top: 20px;
+  margin-left: 330px;
+  margin-bottom: 30px;
+}
+
+.appt-title-student{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+  font-weight: 700;
+  font-size: medium;
+  text-align: left; 
+  margin-left: 40px;
+  padding-top: 25px;
+}
+
+.favorite-tutor-title{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+  font-weight: 700;
+  font-size: medium;
+}
+
+.cancel-button-student{
+  background-color: black;
+  color: white; 
+  border: none; 
+  padding: 10px 20px; 
+  cursor: pointer; 
+  margin-top: 30px;
+  border-radius: 15px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+  font-weight: 500;
+  font-size:medium;
+}
+
+.cancel-button-student:hover{
+  color: black;
+  background-color:rgb(186, 108, 223);
+  transition:0.7s;
+}
+
+.delete-button-student{
+  background-color: black;
+  color: white; 
+  border: none; 
+  padding: 10px 10px; 
+  cursor: pointer; 
+  margin-top: 30px;
+  border-radius: 15px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+  font-weight: 500;
+  font-size:small;
+}
+
+.delete-button-student:hover{
+  color: black;
+  background-color:rgb(186, 108, 223);
+  transition:0.7s;
+}
+
 
