--- a/online-tutoring/src/components/Homepage.css
+++ b/online-tutoring/src/components/Homepage.css
@@ -116,7 +116,7 @@
   height: 380px;
   margin-top: 20px;
   margin-left: 40px;
-  margin-bottom: -410px;
+  top: -810px;
 }
 
 .upcoming-appts-student {
