--- a/online-tutoring/src/components/Homepage.css
+++ b/online-tutoring/src/components/Homepage.css
@@ -9,10 +9,101 @@
     z-index: 1000;
   }
 
+  .purple-panel-student {
+    background: linear-gradient(135deg, #B674E6, #3B2667);
+    width: 200px; 
+    height: 100%; 
+    position: fixed; 
+    top: 0; 
+    left: 100; 
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    }
+  
+    .panel-title-student {
+      color: white;
+      font-size: 20px; 
+      margin-top: 20px;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+      font-weight: 500;
+      padding-top: 35px;
+      padding-right: 80px;
+      }
+  
+  .classes-panel-student{
+    color: white;
+    font-size: 15px; 
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+    font-weight: 500;
+    padding-top: 60px;
+    padding-right: 120px;
+  }
+  
+  .hours-panel-student{
+    color: white;
+    font-size: 15px; 
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+    font-weight: 500;
+    padding-top: 10px;
+    padding-right: 120px;
+    }
+  
+  .subject-panel-student{
+    color: white;
+    font-size: 15px; 
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+    font-weight: 500;
+    padding-right: 80px;
+  }
+  
+  .trophy-student {
+    width: 50px;
+    height: auto;
+    position: relative; 
+    top: -50px; 
+    padding-left: 120px;
+  }
+    
+  .cap-student {
+    width: 45px;
+    height: auto;
+    position: relative; 
+    top: -40px; 
+    padding-left: 120px;
+  }
+    
+  .medal-student {
+    width: 45px;
+    height: auto;
+    position: relative; 
+    top: -48px; 
+    padding-left: 120px;
+  }
+  
+.tutor-logout {
+  padding-top: 200px
+}
+
+.tutor-logout-button {
+  border:none;
+  font-weight: 550;
+  color: white;
+  padding: 15px;
+  background-color: black;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.tutor-logout-button:hover {
+  color: black;
+  background-color:white;;
+  transition:0.7s;
+}
 
 .upcoming-appointments {
   background-color: lightgray;
-  height: 500px;
+  height: 300px;
   width: 800px;
   border-radius: 50px;
 }
@@ -21,6 +112,7 @@
   justify-content: right;
   display: flex;
   padding-right: 80px;
+  padding-bottom: 30px;
 }
 
 .profileImage {
@@ -31,6 +123,7 @@
 }
 
 .profile-container {
+  padding-top: 40px;
   text-align: center;
   float:right;
   margin-right: 200px;
@@ -38,12 +131,13 @@
   padding-left: 100px;
   border-left-color: lightgray;
   border-left-style: groove;
-  
+  height: 100vh
 }
 
 .profile-text-container {
   text-align: left;
 }
+
 .edit-profile {
   color: #3F98CA;
   text-align: center;
@@ -69,6 +163,25 @@
   font-size: 20px
 }
 
+.tutor-notifications {
+  background-color: lightgray;
+  height: 300px;
+  width: 800px;
+  border-radius: 50px;
+  padding-top:20px;
+  font-weight: 500;
+}
+
+.upappt {
+  font-weight: 500;
+  font-size: medium;
+}
+
+.notif-container {
+  justify-content: right;
+  display: flex;
+  padding-right: 80px;
+}
 .search-bar {
     width: 40%;
     background-color: #ccc;
