--- a/online-tutoring/src/components/Homepage.css
+++ b/online-tutoring/src/components/Homepage.css
@@ -104,11 +104,36 @@
 .upcoming-appointments {
   background-color: lightgray;
   height: 300px;
-  width: 800px;
+  width: 1000px;
   border-radius: 50px;
+  overflow: auto;
+  font-weight: 500;
+}
+
+.cancel-appointment {
+  width: 90px;
+  height: 30px;
+  color: white;
+  border-radius: 20px;
+  background-color: black;
+  cursor: pointer;
+  border:none;
+}
+
+.cancel-appointment:hover {
+  color: white;
+  background-color:purple;;
+  transition:0.7s;
+}
+
+
+.student {
+  font-size: 30px;
+  color: purple
 }
 
 .appts-container {
+  padding-top: 80px;
   justify-content: right;
   display: flex;
   padding-right: 80px;
@@ -131,7 +156,8 @@
   padding-left: 100px;
   border-left-color: lightgray;
   border-left-style: groove;
-  height: 100vh
+  height: 100vh;
+  line-height: 45px
 }
 
 .profile-text-container {
@@ -144,29 +170,35 @@
   font-size: 20px;
 }
 
+.appointment-name {
+  font-size: 30px;
+  color: purple
+}
+
 .profile-name {
-  font-size: 20px
+  font-size: 17px
 }
 
 .profile-status {
-  font-size: 20px
+  font-size: 17px
 }
 
 .profile-subjects {
-  font-size: 20px
+  font-size: 17px
 }
+
 .about-me {
-  font-size: 20px
+  font-size: 17px
 }
 
 .available-hours {
-  font-size: 20px
+  font-size: 17px
 }
 
 .tutor-notifications {
   background-color: lightgray;
   height: 300px;
-  width: 800px;
+  width: 1000px;
   border-radius: 50px;
   padding-top:20px;
   font-weight: 500;
